# lights-n-signs

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.disabled  .gitmodules  .prospector.yaml  README.md  clear_gpu.py  credentials.json  ped_test.py  requirements.txt  run_save_bounding_box_video.py  setup.cfg  setup.py  setup.sh  test.py  tox.ini  train_helen.py  train_matthieu.py  train_tiffany.py
.lns_common/: download.bash
.lns_common/preprocess/: preprocess.py
common/: .gitignore  config.py  download.bash  download.sh  model.py
common/benchmarking/: vidstream.py
common/data/: download.sh
common/model/: model.py
common/preprocess/: _preprocessing.py  preprocess.py  preprocessing.py
darknet/: .gitignore  README.md  darknet.py  main.py
darknet/data/: download.sh
data/: download.sh
haar/: .gitignore  README.md  lns_common  make_model.sh  setup.cfg  setup.py  test_new_preprocessing.py
haar/haar/: __init__.py  config.py  evaluate.py  model.py  process.py  train.py
haar/haar/model/: model.py
haar/haar/train/: train.py
haar/lns_haar/: create_samples_multi.sh  evaluate.py  model.py  process.py  train.py
haar/preprocess/: _preprocessing.py  processData.py
haar/preprocess/tempAnnotations/: allImages.txt  annotations.txt  classes.txt
haar/preprocess/textAnnotations/: dayClip1--00000.txt  dayClip1--00001.txt  dayClip1--00002.txt  dayClip1--00003.txt  dayClip1--00004.txt  dayClip1--00005.txt  dayClip1--00006.txt  dayClip1--00007.txt  dayClip1--00008.txt  dayClip1--00009.txt  dayClip1--00010.txt  dayClip1--00011.txt  dayClip1--00012.txt  dayClip1--00013.txt  dayClip1--00014.txt  dayClip1--00015.txt  dayClip1--00016.txt  dayClip1--00017.txt  dayClip1--00018.txt  dayClip1--00019.txt  dayClip1--00020.txt  dayClip1--00021.txt  dayClip1--00022.txt  dayClip1--00023.txt  dayClip1--00024.txt  dayClip1--00025.txt  dayClip1--00026.txt  dayClip1--00027.txt  dayClip1--00028.txt  dayClip1--00029.txt  dayClip1--00030.txt  dayClip1--00031.txt  dayClip1--00032.txt  dayClip1--00033.txt  dayClip1--00034.txt  dayClip1--00035.txt  dayClip1--00036.txt  dayClip1--00037.txt  dayClip1--00038.txt  dayClip1--00039.txt  (+4656 more)
haar/preprocessing/: __init__.py  artificial.py
haar/test/: videoTest.py
haar/testHaar/: README.md
haar/train/: haarTrain.sh  trainSetup.sh
lns/: __init__.py
lns/common/: __init__.py  benchmark_old.py  config.py  cv_lights.py  dataset.py  dataset_distance.py  evaluation.py  evaluation_metrics.py  model.py  preprocess.py  process.py  resources.py  settings.py  structs.py  train.py  visualization.py
lns/haar/: __init__.py  eval.py  model.py  process.py  settings.py  svm_classifier.py  svm_preprocess.py  svm_preprocess_multiclass.py  svm_preprocess_one_v_all.py  svm_train.py  train.py
lns/squeezedet/: __init__.py  imagenet.h5.REMOVED.git-id  lib.py  model.py  process.py  settings.py  train.py  utils.py
lns/ssd_vgg/: process.py
lns/svm/: model.py  process.py  train.py
lns_common/: config.py  model.py  process.py  test_new_preprocessing.py  train.py  visualize_data.py  visualize_model.py
mturk/: drive.py  mturk.py  mturk_eval.py
preprocess/: _preprocessing.py  processData.py
scripts/: OneTimeDatasetCreationAugmentation.py  OneTimeDatasetCreationManav.py  benchmark.py  benchmark_helen.py  benchmark_pedestrians.py  blobs.py  client_secrets.json  dataset_prune_test.py  dla_export_pb.py  download_scale.py  eval.py  eval_helen.py  eval_matthieu_darknet25.py  evaluate_haar.py  feature_map_vis.py  generate_frames.py  kmeans.py  kmeans_preprocess.py  lights_histogram.py  output.npy  pr.py  remove_slanted_Y4Signs.py  resize_Y4Signs.py  signs_inference_on_image.py  split_lights_signs_pedestrains.py  split_lights_signs_pedestrians.py  train.py  train_haar.py  train_haar_manav.py  train_haar_matthieu.py  train_haar_sam.py  train_haar_updated.py  train_multiclass_svm.py  train_sd_lights.py  train_single_multiclass_svm.py  train_svm.py  train_yolo_lights.py  video_visualize_lights.py  vis.py  visualize.py  (+3 more)
squeezedet/: configure.sh  lns_common  prepare_all_lights.py  prepare_generic_lights.py  prepare_generic_signs.py  prepare_scale_signs.py  setup.cfg
squeezedet/lns_squeezedet/: lib.py  model.py  process.py  train.py
test/: fileTest.py
test_model/: model.py  squeeze_benchmark.py
yolov3/: .gitignore  README.md  clean.sh  convert.py  freeze_model.py  kmeans.py  lns_common  make_model.sh  process.py  requirements.txt  setup.cfg  setup.py  setup.sh  training.py  yolo.py
yolov3/yolo3/: __init__.py  model.py  utils.py
(+155 files in other folders)
