[metadata]
name = lns
version = 0
url = https://gitlab.com/aUToronto/autonomy/lights-n-signs-training
long-description = file: README.md


[options]
packages = find:
zip_safe = false
include_package_data = true

python_requires =
  >= 3.7
setup_requires =
  setuptools >= 38.3.0
install_requires =
  easydict
  pyyaml
  pillow
  opencv-python
  tensorflow-gpu == 1.13.2
  keras
  tqdm
  scaleapi
  requests

[options.extras_require]
lint =
  prospector[with_everything]
  tox

[bdist_wheel]
universal = true
