[metadata]
name = lns
version = 0
url = https://gitlab.com/aUToronto/autonomy/lights-n-signs-training
long-description = file: README.md


[options]
packages = find:
zip_safe = false
include_package_data = true

python_requires =
  >= 3.7
setup_requires =
  setuptools >= 38.3.0
install_requires =
  easydict
  pyyaml
  pillow
  tensorflow-gpu == 2.7.2
  keras
  scaleapi
  requests
  black
  cachetools>=3.1.0
  fire
  flake8
  matplotlib
  numpy>=1.14.5
  opencv-python>=3.4.2.17
  pandas
  Pillow>=5.2.0
  plotly
  pyquaternion>=0.9.5
  pytest
  scikit-learn>=0.19.2
  scipy>=1.1.0
  Shapely>=1.6.4.post2
  tqdm>=4.25.0
  pyquaternion
  sklearn
  matplotlib
  motmetrics

[options.extras_require]
lint =
  prospector[with_everything]
  tox

[bdist_wheel]
universal = true
