[metadata]
name = haar
description = Haar submodule of the lights-n-signs training repository.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
  opencv_python
  numpy

[flake8]
select = F, E, W, D, C
ignore =
  W503  # line break before binary operator	
