[metadata]
name = lns_squeezedet
description = SqueezeDet submodule of the lights-n-signs training repository.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
  bleach
  easydict
  enum34
  h5py
  html5lib
  keras==2.1.2
  markdown
  numpy
  opencv_python
  protobuf
  pyyaml
  scipy
  six
  tensorflow
  tensorflow-gpu
  tensorflow-tensorboard
  werkzeug


[flake8]
select = F, E, W, D, C
ignore =
  W503  # line break before binary operator

[mypy]
python_version = 3.6
follow_imports = silent
strict_optional = True
disallow_any_unimported = False
disallow_any_expr = False
disallow_any_decorated = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
check_untyped_defs = True
warn_no_return = True
warn_return_any = True
warn_unused_ignores = True
no_implicit_optional = False
