[metadata]
name = yolov3
description = Yolov3 implementation in keras for training.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
  pillow
  matplotlib
  bleach==1.5.0
  easydict==1.7
  enum34==1.1.6
  h5py==2.7.1
  html5lib==0.9999999
  Keras==2.1.2
  Markdown==2.6.11
  numpy==1.14.2
  opencv-python==3.3.0.10
  protobuf==3.5.2
  PyYAML==3.12
  scipy==1.0.0
  six==1.11.0
  tensorflow==1.4.0
  tensorflow-gpu==1.4.1
  tensorflow-tensorboard==0.4.0
  Werkzeug==0.14.1

[flake8]
select = F, E, W, D, C
ignore =
  W503  # line break before binary operator

[mypy]
python_version = 3.6
follow_imports = silent
strict_optional = True
disallow_any_unimported = False
disallow_any_expr = False
disallow_any_decorated = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
check_untyped_defs = True
warn_no_return = True
warn_return_any = True
warn_unused_ignores = True
no_implicit_optional = False
